# Translation-PDF

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yaml
translate_pdf/: __init__.py  config.py
translate_pdf/modules/: deepl_auth.py  pdf_edit.py  spacy_api.py  translate.py  translate_pdf.py
translate_pdf/scripts/: translate_pdf.py
translate_pdf/utils/: utils.py
